--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Interest Section -->
     <section id="interest" class="py-20 bg-gray-900">
         <div class="container mx-auto px-4">
-            <h2 class="text-4xl font-semibold text-center mb-10 text-white"></h2>
+            <h2 class="text-4xl font-semibold text-center mb-10 text-white">Interest Field</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
             </div>
@@ -49,22 +49,28 @@
             <h2 class="text-4xl font-semibold text-center mb-10 text-white">Top Tier Activities</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project 1 -->
-                <div class="bg-gray-800 p-6 shadow rounded">
-                    <img src="image/activity_img/ngoding.png" alt="Project 1" class="w-full h-48 object-cover rounded mb-4">
-                    <h3 class="text-2xl font-bold mb-4 text-white">coding</h3>
-                    <p class="text-gray-400 hidden">Deskripsi singkat tentang project 1.</p>
+                <div class="bg-gray-800 p-6 shadow rounded activity-card">
+                    <img src="activity_img/ngoding.png" alt="Project 1" class="w-full h-48 object-cover rounded mb-4">
+                    <div class="description">
+                        <h3 class="text-2xl font-bold mb-4 text-white">coding</h3>
+                        <p class="text-gray-400">Deskripsi singkat tentang project 1.</p>
+                    </div>
                 </div>
                 <!-- Project 2 -->
-                <div class="bg-gray-800 p-6 shadow rounded">
-                    <img src="image/activity_img/math.png" alt="Project 2" class="w-full h-48 object-cover rounded mb-4">
-                    <h3 class="text-2xl font-bold mb-4 text-white">math</h3>
-                    <p class="text-gray-400 hidden">Deskripsi singkat tentang project 2.</p>
+                <div class="bg-gray-800 p-6 shadow rounded activity-card">
+                    <img src="activity_img/math.png" alt="Project 2" class="w-full h-48 object-cover rounded mb-4">
+                    <div class="description">
+                        <h3 class="text-2xl font-bold mb-4 text-white">math</h3>
+                        <p class="text-gray-400">Deskripsi singkat tentang project 2.</p>
+                    </div>
                 </div>
                 <!-- Project 3 -->
-                <div class="bg-gray-800 p-6 shadow rounded">
-                    <img src="image/activity_img/sports.png" alt="Project 3" class="w-full h-48 object-cover rounded mb-4">
-                    <h3 class="text-2xl font-bold mb-4 text-white">sports</h3>
-                    <p class="text-gray-400 hidden">Deskripsi singkat tentang project 3.</p>
+                <div class="bg-gray-800 p-6 shadow rounded activity-card">
+                    <img src="activity_img/sports.png" alt="Project 3" class="w-full h-48 object-cover rounded mb-4">
+                    <div class="description">
+                        <h3 class="text-2xl font-bold mb-4 text-white">sports</h3>
+                        <p class="text-gray-400">Deskripsi singkat tentang project 3.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,25 +82,25 @@
             <h2 class="text-4xl font-semibold text-center mb-10 text-white">Project Highlights</h2>
             <div class="flex flex-col items-center space-y-10">
                 <!-- Project 1 -->
-                <div class="flex flex-col md:flex-row items-center">
-                    <img src="image/project_img/barcode.png" alt="Project 1" class="w-48 h-48 object-cover mb-4 md:mb-0 md:mr-4">
-                    <div class="text-center md:text-left">
+                <div class="flex flex-col md:flex-row items-center project-card">
+                    <img src="project_img/barcode.png" alt="Project 1" class="w-48 h-48 object-cover mb-4 md:mb-0 md:mr-4">
+                    <div class="description">
                         <h3 class="text-2xl font-bold mb-2 text-white">Barcode Generator</h3>
                         <p class="text-gray-400">Deskripsi singkat tentang project 1.</p>
                     </div>
                 </div>
                 <!-- Project 2 -->
-                <div class="flex flex-col md:flex-row-reverse items-center">
-                    <img src="image/project_img/pdfextract.png" alt="Project 2" class="w-48 h-48 object-cover mb-4 md:mb-0 md:ml-4">
-                    <div class="text-center md:text-right">
+                <div class="flex flex-col md:flex-row-reverse items-center project-card">
+                    <img src="project_img/hand.png" alt="Project 2" class="w-48 h-48 object-cover mb-4 md:mb-0 md:ml-4">
+                    <div class="description">
                         <h3 class="text-2xl font-bold mb-2 text-white">Hand Tracking</h3>
                         <p class="text-gray-400">Deskripsi singkat tentang project 2.</p>
                     </div>
                 </div>
                 <!-- Project 3 -->
-                <div class="flex flex-col md:flex-row items-center">
-                    <img src="image/project_img/search.png" alt="Project 3" class="w-48 h-48 object-cover mb-4 md:mb-0 md:mr-4">
-                    <div class="text-center md:text-left">
+                <div class="flex flex-col md:flex-row items-center project-card">
+                    <img src="project_img/search.png" alt="Project 3" class="w-48 h-48 object-cover mb-4 md:mb-0 md:mr-4">
+                    <div class="description">
                         <h3 class="text-2xl font-bold mb-2 text-white">Dataset Search Engine</h3>
                         <p class="text-gray-400">Deskripsi singkat tentang project 3.</p>
                     </div>
